[package]
name = "timed-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt", "net", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
